--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11132,4 +11132,58 @@ header .banner .btn {
   border-radius: 30px;
 }
 
+main h2, main .h2 {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  main .container .row {
+    justify-content: space-evenly !important;
+  }
+}
+@media screen and (max-width: 760px) {
+  main .container .row {
+    flex-direction: column;
+  }
+  main .container .row .col-4 {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    width: 100% !important;
+    justify-content: center !important;
+  }
+  main .container .row .col-4 p {
+    text-align: justify !important;
+  }
+  main .container .row:first-child, main .container .row:last-child {
+    flex-direction: column-reverse !important;
+  }
+}
+@media screen and (max-width: 375px) {
+  header nav .container {
+    flex-direction: column !important;
+  }
+  header .banner .container h2, header .banner .container .h2 {
+    margin-bottom: 2em;
+  }
+  header .banner .container .btn {
+    margin: 0 !important;
+  }
+
+  main .container .row {
+    flex-direction: column;
+  }
+  main .container .row .col-4 {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    width: 100% !important;
+    justify-content: center !important;
+  }
+  main .container .row .col-4 p {
+    text-align: justify !important;
+  }
+  main .container .row:first-child, main .container .row:last-child {
+    flex-direction: column-reverse !important;
+  }
+}
+
 /*# sourceMappingURL=app.css.map */
